--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/flujo-intervencion-recursos/flujo-intervencion-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/flujo-intervencion-recursos/flujo-intervencion-recursos.component.html
@@ -2,22 +2,23 @@
   <p class="px-2em">
     Duración en meses del proyecto:
     <b>
-      5
+      {{ plazoContratacion?.plazoMeses }}
     </b>
   </p>
   <p class="px-2em">
     Valor total del contrato:
     <b>
-      $150.000.000
+      {{ valorContrato | currency: 'COP':'symbol-narrow':'.0-0' }}
     </b>
   </p>
 </div>
 
 <div class="tabs--actions">
-  <button mat-raised-button color="accent" class="tabs--btn">
+  <button mat-raised-button color="accent" class="tabs--btn" (click)="this.descargarDRPBoton()">
       Ver documento de registro presupuestal
   </button>
-  <button mat-raised-button color="accent" class="tabs--btn" (click)="openCargarFlujo()"
+
+  <button mat-raised-button color="accent" class="tabs--btn" (click)="openCargarFlujo()" [disabled]="existeRegistroValido === true"
       >
       Cargar flujo de inversión de recursos
   </button>
@@ -42,7 +43,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Fecha de cargue
         </th>
-        <td mat-cell *matCellDef="let element"><b>{{element.fechaCreacion}}</b></td>
+        <td mat-cell *matCellDef="let element"><b>{{element.fechaCreacion  | date: 'dd/MM/yyyy' }}</b></td>
       </ng-container>
 
       <!-- numeroToalRegistros Column -->
@@ -76,7 +77,7 @@
         </th>
         <td mat-cell *matCellDef="let element">
           <span class="info-text d-block m-0" [class.sin-diligenciar]="element.estadoCargue === 'Fallido'"
-            [class.completo]="element.estadoCargue === 'Valido'"></span>
+            [class.completo]="element.estadoCargue === 'Válido'"></span>
           {{element.estadoCargue}}
         </td>
       </ng-container>
@@ -85,16 +86,19 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button">
+          <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button" (click)="descargar(element)">
             Ver detalle
           </button>
           <button mat-button color="warn" mat-raised-button color="accent" class="btn-table info-button"
-            [class.sin-diligenciar]="element.estadoRegistro === 'Sin diligenciar'"
-            [class.en-proceso]="element.estadoRegistro === 'En proceso'"
-            [class.completo]="element.estadoRegistro === 'Completo'" type="button"
-            (click)="openObservaciones(element.id)">
-            Observaciones
-          </button>
+          [class.sin-diligenciar]="!element.tempAjustePragramacionObservacion"
+          [class.en-proceso]="element.tempAjustePragramacionObservacion != null && (!element.tempAjustePragramacionObservacion.observaciones || element.tempAjustePragramacionObservacion.observaciones == '')"
+          [class.completo]="element.tempAjustePragramacionObservacion != null && element.tempAjustePragramacionObservacion.observaciones && element.tempAjustePragramacionObservacion.observaciones != ''" type="button"
+          (click)="openObservaciones(element)">
+          Observaciones
+        </button>
+        <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button" (click)="eliminar(element)">
+          Eliminar
+        </button>
         </td>
       </ng-container>
 
