--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/programacion-de-obra/programacion-de-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/programacion-de-obra/programacion-de-obra.component.html
@@ -1,5 +1,5 @@
 <div class="text-center mt-1em">
-  <button mat-raised-button color="accent" type="button" class="mb-1em" (click)="openCargarProgramacion()">
+  <button mat-raised-button color="accent" type="button" class="mb-1em" (click)="openCargarProgramacion()" [disabled]="existeRegistroValido === true">
     Cargar programación
   </button>
   <div *ngIf="this.dataSource.data.length > 0">
@@ -35,7 +35,7 @@
         <!-- numeroRegistrosValidos Column -->
         <ng-container matColumnDef="cantidadRegistrosValidos">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Número de registros validos
+            Número de registros válidos
           </th>
           <td mat-cell *matCellDef="let element">{{element.cantidadRegistrosValidos}}</td>
         </ng-container>
@@ -55,7 +55,7 @@
           </th>
           <td mat-cell *matCellDef="let element">
             <span class="info-text d-block m-0" [class.sin-diligenciar]="element.estadoCargue === 'Fallido'"
-              [class.completo]="element.estadoCargue === 'Valido'"></span>
+              [class.completo]="element.estadoCargue === 'Válido'"></span>
             {{element.estadoCargue}}
           </td>
         </ng-container>
