--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -232,13 +232,13 @@
         <app-tabla-info-fuenterec-gog *ngIf="solicitudPago.tablaInformacionFuenteRecursos !== undefined && solicitudPago.tablaInformacionFuenteRecursos.length > 0" [tablaInformacionFuenteRecursos]="solicitudPago.tablaInformacionFuenteRecursos"></app-tabla-info-fuenterec-gog>
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="solicitudPagoFase?.solicitudPagoFaseAmortizacion.length > 0">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-                Amortización del anticipo
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <div *ngFor="let solicitudAmortizacion of solicitudPagoFase?.solicitudPagoFaseAmortizacion">
-          <app-amortizacion-pago [solicitudPagoFaseAmortizacion]="solicitudAmortizacion" [contratacionProyectoId]="solicitudPagoFase?.contratacionProyectoId" [vAmortizacionXproyecto]="solicitudPago?.vAmortizacionXproyecto[0]"></app-amortizacion-pago>
-        </div>
-    </mat-expansion-panel>
+      <mat-expansion-panel-header class="expansion-style--header">
+          <mat-panel-title class="expansion-style--title">
+             Amortización del anticipo
+          </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div *ngFor="let solicitudAmortizacion of solicitudesPagoFase">
+        <app-amortizacion-pago [solicitudPagoFaseAmortizacion]="solicitudAmortizacion?.solicitudPagoFaseAmortizacion[0]" [contratacionProyectoId]="solicitudAmortizacion?.contratacionProyectoId" [vAmortizacion]="solicitudPago?.vAmortizacionXproyecto"></app-amortizacion-pago>
+      </div>
+  </mat-expansion-panel>
 </mat-accordion>
