--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -53,7 +53,7 @@
             </table>
         </div> -->
 
-        <app-tabla-aportantes *ngIf="solicitudPago.tablaUsoFuenteAportante !== undefined && solicitudPago.tablaUsoFuenteAportante.usos.length > 0" [tablaUsoFuenteAportante]="solicitudPago.tablaUsoFuenteAportante.usos" [tablaDrpUso]="solicitudPago.tablaDrpUso"></app-tabla-aportantes>
+        <app-tabla-aportantes *ngIf="solicitudPago.tablaUsoFuenteAportante !== undefined && solicitudPago.tablaUsoFuenteAportante.usos.length > 0" [tablaUsoFuenteAportante]="solicitudPago.tablaUsoFuenteAportante.usos" [tablaDrpUso]="solicitudPago.tablaDRPODG"></app-tabla-aportantes>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
