--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/tabla-ajuste-programacion/tabla-ajuste-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/tabla-ajuste-programacion/tabla-ajuste-programacion.component.html
@@ -57,7 +57,7 @@
         Estado del registro
       </th>
       <td mat-cell *matCellDef="let element">
-        {{element.estadoNombre}}
+        {{element.estadoDescripcion}}
       </td>
     </ng-container>
 
@@ -66,38 +66,42 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
 
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'validar', element.ajusteProgramacionId ]"
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button" (click)="validar( element , true )"
           *ngIf="element.estadoCodigo === '3'">
           Validar ajuste a la programación
         </a>
-        
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'validar', element.ajusteProgramacionId ]"
+
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button" (click)="validar( element, false )"
           *ngIf="element.estadoCodigo === '6'">
           Ver detalle / Editar
         </a>
-        
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+
+        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button" (click)="verDetalle( element )"
+        *ngIf="element.estadoCodigo === '4'">
+          Ver detalle
+        </a>
+
+        <!--<a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           [routerLink]="[ 'historial', element.id ]">
           Historial
-        </a>
-        
+        </a>-->
+
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-        *ngIf="element.estadoCodigo === '6' &&  
-               element.registroCompletoValidacion === true && 
+        (click)="enviarInterventor(element.ajusteProgramacionId)"
+        *ngIf="element.estadoCodigo === '6' &&
+               element.registroCompletoValidacion === true &&
                ( element.tieneObservacionesFlujoInversion === true || element.tieneObservacionesProgramacionObra === true )">
           Enviar al interventor
-        </button> 
+        </button>
 
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         (click)="Aprobar(element.ajusteProgramacionId)"
-        *ngIf="element.estadoCodigo === '6' &&  
-               element.registroCompletoValidacion === true && 
-               element.tieneObservacionesFlujoInversion === false && 
+        *ngIf="element.estadoCodigo === '6' &&
+               element.registroCompletoValidacion === true &&
+               element.tieneObservacionesFlujoInversion === false &&
                element.tieneObservacionesProgramacionObra === false ">
         Aprobar ajuste a la programación
-        </button> 
+        </button>
 
       </td>
     </ng-container>
