--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/registrar-ajuste-programacion/registrar-ajuste-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/registrar-ajuste-programacion/registrar-ajuste-programacion.component.html
@@ -6,7 +6,12 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Registrar ajuste a la programación {{ ajusteProgramacionInfo.llaveMen }}
+      <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+          Ver detalle ajuste a la programación {{ ajusteProgramacionInfo.llaveMen }}
+      </ng-container>
+      <ng-template #noEsVerDetalle>
+          {{ esRegistroNuevo === true ? 'Registrar' : 'Ver detalle/Editar' }} ajuste a la programación {{ ajusteProgramacionInfo.llaveMen }}
+      </ng-template>
     </h1>
     <p class="info-sub-title">
       <span>
@@ -135,6 +140,7 @@
                         [novedadContractualRegistroPresupuestal] = "novedad?.novedadContractualRegistroPresupuestal[0]"
                         [plazoContratacion] = "novedad?.contrato?.contratacion?.plazoContratacion"
                         [valorContrato] = "novedad?.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud + presupuestoAdicionalSolicitado"
+                        [esVerDetalle] = "esVerDetalle"
     >
     </app-expansion-panel>
   </div>
