--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/tabla-ajuste-programacion/tabla-ajuste-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/tabla-ajuste-programacion/tabla-ajuste-programacion.component.html
@@ -65,7 +65,7 @@
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        
+
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         *ngIf="element.ajusteProgramacionId === undefined"
           (click)="RegistrarNuevo( element )"
@@ -74,7 +74,7 @@
         </a>
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          *ngIf="element.ajusteProgramacionId !== undefined && element.estadoCodigo === '1'"
+          *ngIf="(element.ajusteProgramacionId !== undefined && element.estadoCodigo === '1') || element.estadoCodigo === '4'"
           (click)="RegistrarNuevo( element )"
           >
           Registrar ajuste a la programación
@@ -95,11 +95,11 @@
         </a>
         <!--(dbenitez) puse codigo 6 para temas de ver detalle-->
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          *ngIf="element.estadoCodigo === '5' || element.estadoCodigo === '6'" (click)="verDetalle(element)"
+          *ngIf="element.estadoCodigo === '3' || element.estadoCodigo === '5' || element.estadoCodigo === '6'" (click)="verDetalle(element)"
           >
           Ver detalle
         </a>
-        
+
       </td>
     </ng-container>
 
