--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/validar-ajuste/validar-ajuste.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/validar-ajuste/validar-ajuste.component.html
@@ -6,19 +6,24 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Validar ajuste a la programación LL03260326
+      <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+          Ver detalle ajuste a la programación {{ ajusteProgramacionInfo.llaveMen }}
+      </ng-container>
+      <ng-template #noEsVerDetalle>
+          {{ esRegistroNuevo === true ? 'Validar' : 'Ver detalle/Editar' }} ajuste a la programación {{ ajusteProgramacionInfo.llaveMen }}
+      </ng-template>
     </h1>
     <p class="info-sub-title">
       <span>
         Fecha de aprobacion de póliza:
         <b>
-          21/06/2020
+          {{ ajusteProgramacionInfo.fechaAprobacionPoliza | date: 'dd/MM/yyyy'  }}
         </b>
       </span>
       <span>
         Número de contrato:
         <b>
-          C223456789
+          {{ ajusteProgramacionInfo.numeroContrato }}
         </b>
       </span>
     </p>
@@ -30,73 +35,101 @@
         <strong>
           Tipo de modificación:
         </strong>
-        Prorroga
+        {{ ajusteProgramacionInfo.novedadesSeleccionadas }}
       </p>
-      <p>
-        <strong>
-          Fecha de incio:
+      <p *ngIf="modificaFecha">
+        <strong >
+          Fecha de inicio:
         </strong>
-        30/06/2020
+        {{
+          (novedad?.contrato?.fechaActaInicioFase2
+            ? novedad?.contrato?.fechaActaInicioFase2
+            : novedad?.contrato?.fechaActaInicioFase1
+          ) | date: 'dd/MM/yyyy'
+        }}
       </p>
-      <p>
+      <p  *ngIf="modificaFecha">
         <strong>
           Fecha final antes de la modificación:
         </strong>
-        09/11/2022
+        {{
+          (novedad?.contrato?.fechaTerminacionFase2
+            ? novedad?.contrato?.fechaTerminacionFase2
+            : novedad?.contrato?.fechaTerminacion
+          ) | date: 'dd/MM/yyyy'
+        }}
       </p>
-      <p>
-        <strong>
+      <p *ngIf="modificaFecha">
+        <strong >
           Nueva fecha de finalización:
         </strong>
-        15/02/2023
+        {{
+          (novedad?.contrato?.fechaEstimadaFinalizacion ? novedad?.contrato?.fechaEstimadaFinalizacion :
+            novedad?.contrato?.fechaTerminacionFase2
+            ? novedad?.contrato?.fechaTerminacionFase2
+            : novedad?.contrato?.fechaTerminacion
+          ) | date: 'dd/MM/yyyy'
+        }}
+      </p>
+      <p *ngIf="esAdicion">
+        <strong >
+          Valor inicial:
+        </strong>
+        {{ novedad?.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud | currency: 'COP':'symbol-narrow':'.0-0'  }}
+      </p>
+      <p *ngIf="esAdicion">
+        <strong >
+          Valor después de la modificación:
+        </strong>
+        {{ novedad?.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud + presupuestoAdicionalSolicitado | currency: 'COP':'symbol-narrow':'.0-0'  }}
       </p>
       <p>
         <strong>
           Nombre del contratista:
         </strong>
-        Constructora Colpatria
+        {{ ajusteProgramacionInfo.nombreContratista }}
       </p>
       <p>
         <strong>
           Número de identificación (NIT/RUT):
         </strong>
-        900.675.987-4
+        {{ ajusteProgramacionInfo.nombreContratista }}
       </p>
       <p>
         <strong>
           Tipo de intervención:
         </strong>
-        Remodelación
+        {{ novedad?.proyectosSeleccionado?.tipoIntervencion }}
       </p>
       <p>
         <strong>
           Departamento:
         </strong>
-        Boyacá
+        {{ novedad?.proyectosSeleccionado?.departamento }}
       </p>
       <p>
         <strong>
           Institución Educativa:
         </strong>
-        Nuestra Señora del Carmen
+        {{ novedad?.proyectosSeleccionado?.institucionEducativa }}
       </p>
       <p>
         <strong>
           Sede:
         </strong>
-        Unica sede
+        {{ novedad?.proyectosSeleccionado?.sede }}
       </p>
       <p>
         <strong>
           Municipio:
         </strong>
-        Susacón
+        {{ novedad?.proyectosSeleccionado?.municipio }}
       </p>
       <p>
         <strong>
           Valor total del proyecto:
         </strong>
-        $ 60.000.000
+        {{ novedad?.proyectosSeleccionado?.valorTotal | currency: '':'symbol':'3.0' }}
       </p>
     </mat-card-content>
   </mat-card>
@@ -104,6 +137,7 @@
   <div class="mb-2em">
     <app-expansion-panel
                         [ajusteProgramacion]="ajusteProgramacion"
+                        [esVerDetalle]="esVerDetalle"
     >
   </app-expansion-panel>
   </div>
