--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-ajuste-programacion/components/expansion-panel/expansion-panel.component.html
@@ -16,6 +16,7 @@
                               [ajusteProgramacionInfo]="ajusteProgramacionInfo"
                               [esVerDetalle]= "esVerDetalle"
                               (estadoSemaforo)="estadoSemaforoObra = $event"
+                              [ajusteProgramacion]="ajusteProgramacion"
     >
     </app-programacion-de-obra>
   </mat-expansion-panel>
@@ -34,6 +35,7 @@
                                     [valorContrato] = "valorContrato"
                                     [esVerDetalle]= "esVerDetalle"
                                     (estadoSemaforo)="estadoSemaforoFlujo = $event"
+                                    [ajusteProgramacion]="ajusteProgramacion"
     >
 
     </app-flujo-intervencion-recursos>
