--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/tabla-ajuste-programacion/tabla-ajuste-programacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-ajuste-programacion/components/tabla-ajuste-programacion/tabla-ajuste-programacion.component.html
@@ -77,7 +77,7 @@
         </a>
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button" (click)="verDetalle( element )"
-        *ngIf="element.estadoCodigo === '4'">
+        *ngIf="element.estadoCodigo === '4' || element.estadoCodigo === '5'">
           Ver detalle
         </a>
 
