--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -25,7 +25,7 @@
                 <mat-card-content style="text-align: left;">
                     <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
                     <div *ngFor="let concepto of getConceptos( j ).controls">
-                        <p><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                        <p style="margin-top: 1em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
                         <p><b>Uso para el concepto de pago: </b> {{ getUsosParaElConceoto(concepto.get( 'usoCodigo' ).value) }} </p>
                         <!-- <p><b>Monto pendiente por facturar: </b> {{ concepto.get( 'montoMaximo' ).value | currency:'':'symbol-narrow':'.0-0' }} </p> -->
                         <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
