--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -24,7 +24,7 @@
                 <mat-card-content style="text-align: left;">
                     <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
                     <div *ngFor="let concepto of getConceptos( j ).controls">
-                        <p><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
+                        <p style="margin-top: 1em;"><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
                         <p><b>Uso para el concepto de pago: </b> {{ getUsosParaElConceoto(concepto.get( 'usoCodigo' ).value) }} </p>
                         <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                     </div>
