Fixes amortizacion - saldos - origen
Se modificó la vista VDescuentosOdgxFuenteFinanciacionXaportante (tramitada -> aprobada)

--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -245,9 +245,9 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
 
-        <div class="mt-1em text-center">
+       <!--<div class="mt-1em text-center">
             <b>Consecutivo: {{ solicitudPago.ordenGiro !== undefined ? solicitudPago.ordenGiro.consecutivoOrigen : '' }} </b>
-        </div>
+        </div>-->
 
         <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
     </mat-expansion-panel>
