--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -46,5 +46,38 @@
                                         [avanceFisicoObs]="avanceFisicoObs">
             </app-tabla-avance-fisico>
         </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Observaciones
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <div class="flex-editor mt-2em">
+                <mat-card class="shipping-card w-80 border">
+                    <mat-card-header class="header-card">
+                        <mat-card-title class="header-card--text">
+                            Observaciones al avance físico
+                        </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <section></section>
+                    </mat-card-content>
+                </mat-card>
+              </div>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Soporte Project
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <div class="text-center">
+                <button mat-raised-button color="accent">Descargar soporte project</button>
+            </div>
+        </mat-expansion-panel>
     </mat-accordion>
 </section>
