--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -49,6 +49,26 @@
                                         (tieneObservacion)="semaforoAvanceFisico = 'en-proceso'; estadoSemaforoAvanceFisico.emit( 'en-proceso' )">
             </app-tabla-avance-fisico>
         </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAvanceFisico">
+                    Observaciones
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <app-observaciones-detalle-avance></app-observaciones-detalle-avance>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAvanceFisico">
+                    Soporte Project
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <app-soporte-project></app-soporte-project>
+        </mat-expansion-panel>
     </mat-accordion>
 </section>
 
@@ -96,6 +116,39 @@
             </mat-expansion-panel-header>
 
             <app-tabla-avance-fisico [seguimientoSemanal]="seguimientoSemanal" [avanceFisicoObs]="avanceFisicoObs" [esVerDetalle]="esVerDetalle"></app-tabla-avance-fisico>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Observaciones
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <div class="flex-editor mt-2em">
+                <mat-card class="shipping-card w-80 border">
+                    <mat-card-header class="header-card">
+                        <mat-card-title class="header-card--text">
+                            Observaciones al avance físico
+                        </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <section></section>
+                    </mat-card-content>
+                </mat-card>
+              </div>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style sub-expansion">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Soporte Project
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <div class="text-center">
+                <button mat-raised-button color="accent">Descargar soporte project</button>
+            </div>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
