--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/form-aprobar-orden-giro/form-aprobar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/form-aprobar-orden-giro/form-aprobar-orden-giro.component.html
@@ -69,24 +69,38 @@
         </mat-expansion-panel>
 
         <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title">
+                  Origen
+              </mat-panel-title>
+          </mat-expansion-panel-header>
+
+         <!--<div class="mt-1em text-center">
+              <b>Consecutivo: {{ solicitudPago.ordenGiro !== undefined ? solicitudPago.ordenGiro.consecutivoOrigen : '' }} </b>
+          </div>-->
+
+          <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
+      </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
                     Observaciones
                 </mat-panel-title>
             </mat-expansion-panel-header>
-    
+
             <app-observaciones  [esRegistroNuevo]="esRegistroNuevo"
                                 [solicitudPago]="solicitudPago">
             </app-observaciones>
         </mat-expansion-panel>
-    
+
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
                     Soporte de orden de giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
-    
+
             <app-soporte-orden-giro [esRegistroNuevo]="esRegistroNuevo"
                                     [solicitudPago]="solicitudPago"
                                     *ngIf="solicitudPago.ordenGiro.ordenGiroDetalle[ 0 ].ordenGiroSoporte.length > 0">
@@ -168,15 +182,15 @@
                 </button>
             </div>
         </form>
-    
+
         <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
             <table mat-table [dataSource]="tablaHistorial" matSort>
-          
+
                 <ng-container matColumnDef="fechaRevision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
                   <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="responsable">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
                     <td mat-cell *matCellDef="let element" align="center" class="color-text">
@@ -187,14 +201,14 @@
                         </div>
                     </td>
                 </ng-container>
-          
+
                 <ng-container matColumnDef="historial">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
                   <td mat-cell *matCellDef="let element" align="center" class="color-text">
                       <section [innerHTML]="element.observacion"></section>
                   </td>
                 </ng-container>
-            
+
               <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
             </table>
