--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -250,7 +250,7 @@
                 </div>
               </div>
               <div class="text-right">
-                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminaConcepto(i,j)">
+                <button mat-button color="warn" type="button" class="btn-eliminar" (click)="eliminaConcepto(i,j)" *ngIf="getConceptos( i ).controls.length > 1">
                   <img src="assets/img/icon/menos.svg" alt="Eiminar invitado" />
                   Eliminar concepto
                 </button>
