--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/detalle-giro/detalle-giro.component.html
@@ -238,19 +238,20 @@
                                     [esPreconstruccion]="solicitudPagoFase.esPreconstruccion">
             </app-tercero-causacion>
         </mat-expansion-panel>
+
+        <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title">
+                  Origen
+              </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          <!--<div class="mt-1em text-center">
+              <b>Consecutivo: {{ solicitudPago.ordenGiro !== undefined ? solicitudPago.ordenGiro.consecutivoOrigen : '' }} </b>
+          </div>-->
+
+          <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
+      </mat-expansion-panel>
     </div>
 
-    <mat-expansion-panel class="expansion-style sub-expansion">
-        <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-                Origen
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-
-        <!--<div class="mt-1em text-center">
-            <b>Consecutivo: {{ solicitudPago.ordenGiro !== undefined ? solicitudPago.ordenGiro.consecutivoOrigen : '' }} </b>
-        </div>-->
-
-        <app-form-origen [solicitudPago]="solicitudPago"></app-form-origen>
-    </mat-expansion-panel>
 </mat-accordion>
